<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.biniam.rss.ui.base.AboutActivity">


    <ImageView
        android:id="@+id/appIcon"
        android:layout_width="49dp"
        android:layout_height="38dp"
        android:layout_alignTop="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_paper" />


    <TextView
        android:id="@+id/biniamAnd"
        android:layout_width="109dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="246dp"
        android:fontFamily="@string/montserrat_font_path"
        android:text="@string/biniam"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Widget.PopupMenu.Header"
        android:textColor="@color/icon_color"
        android:textSize="14dp" />


    <Button
        android:id="@+id/sendFeedback"
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="146dp"
        android:background="@color/transparent"
        android:text="@string/send_feedback"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/cod_gray"
        android:textSize="@dimen/smaller_font_size" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="244dp"
        android:text="Version (1.0.2)"
        android:textSize="13dp"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="Developer:" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="189dp"
        android:layout_toEndOf="@+id/textView2"
        android:text="@string/app_name"
        android:textSize="20dp"
        android:textStyle="bold" />


    <!--<FrameLayout
        android:id="@+id/libs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sendFeedback"
        android:layout_centerHorizontal="true"

        />-->


</RelativeLayout>


