<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.biniisu.leanrss.ui.base.FeedbinLoginActivity">


    <RelativeLayout
        android:id="@+id/loginContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">


        <ImageView
            android:id="@+id/feedbinLogo"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_feedbin_logo"
            android:tint="@color/icon_color" />


        <TextView
            android:id="@+id/loginToFeedBinTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/feedbinLogo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/regular_padding"
            android:text="@string/login_to_feedbin_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.PopupMenu.Header"
            android:textSize="@dimen/regular_font_size" />

        <View
            android:id="@+id/sep"
            android:layout_width="128dp"
            android:layout_height="0.5dp"
            android:layout_below="@id/loginToFeedBinTitle"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/regular_padding"
            android:background="@drawable/list_divider" />


        <TextView
            android:id="@+id/feedbinDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sep"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/regular_padding"
            android:maxWidth="200dp"
            android:text="@string/feedbin_description"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.PopupMenu.Header"
            android:textColor="@color/light_gray"
            android:textSize="@dimen/smaller_font_size" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/feedBinEmailEditText"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/feedbinDescription"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/regular_padding"
            android:hint="@string/feedbin_email_hint"
            android:inputType="textEmailAddress" />


        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/feedBinPasswordEditText"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/feedBinEmailEditText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/regular_padding"
            android:hint="@string/feedbin_psswd_hint"
            android:inputType="textPassword" />


        <Button
            android:id="@+id/loginToFeedBinButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/feedBinPasswordEditText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/white_var"
            android:paddingEnd="@dimen/extra_large_padding"
            android:paddingStart="@dimen/extra_large_padding"
            android:text="@string/feedbin_signin_button_text"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/cod_gray"
            android:textSize="@dimen/smaller_font_size" />

    </RelativeLayout>


    <ProgressBar
        android:id="@+id/loginProgress"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <Button
        android:id="@+id/visiFeedbinSite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/small_padding"
        android:background="@color/transparent"
        android:text="@string/feedbin_dot_com"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/cod_gray"
        android:textSize="@dimen/smaller_font_size" />

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/snackBarAnchor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />


</RelativeLayout>
