<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/articleViewActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.biniam.rss.ui.base.FeedItemsActivity">


    <FrameLayout
        android:id="@+id/feed_items_viewpager_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:translationZ="0dp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:elevation="8dp"
        android:fitsSystemWindows="true">


        <android.support.design.widget.CoordinatorLayout
            android:id="@+id/snackBarAnchor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="49dp"
            android:background="@color/transparent" />


        <android.support.v7.widget.CardView
            android:id="@+id/rateCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="65dp"
            android:layout_marginEnd="@dimen/extra_large_padding"
            android:layout_marginStart="@dimen/extra_large_padding"
            android:padding="@dimen/small_padding"
            android:visibility="invisible"
            app:cardElevation="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/rateIcn"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="@dimen/regular_padding"
                    android:layout_marginTop="@dimen/extra_large_padding"
                    android:src="@drawable/ic_thumb_up_black_24dp"
                    android:tint="@color/carmine_pink" />

                <TextView
                    android:id="@+id/rateTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/regular_padding"
                    android:layout_marginStart="@dimen/regular_padding"
                    android:layout_marginTop="@dimen/extra_large_padding"
                    android:layout_toEndOf="@id/rateIcn"
                    android:text="@string/enjoying_readably"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/rateMsg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@id/rateTitle"
                    android:layout_below="@id/rateTitle"
                    android:layout_marginEnd="@dimen/extra_large_padding"
                    android:layout_marginTop="@dimen/regular_padding"
                    android:text="@string/rate_prompt_message"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                    android:textSize="@dimen/regular_font_size" />


                <Button
                    android:id="@+id/dontRate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/rateMsg"
                    android:layout_marginBottom="@dimen/regular_padding"
                    android:layout_marginTop="@dimen/regular_padding"
                    android:layout_toStartOf="@+id/rateReadably"
                    android:background="@color/transparent"
                    android:text="@string/no" />

                <Button
                    android:id="@id/rateReadably"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@id/rateMsg"
                    android:layout_marginBottom="@dimen/regular_padding"
                    android:layout_marginEnd="@dimen/regular_padding"
                    android:layout_marginTop="@dimen/regular_padding"
                    android:background="@color/transparent"
                    android:text="@string/yeah"
                    android:textColor="@color/carmine_pink" />


            </RelativeLayout>


        </android.support.v7.widget.CardView>

        <ProgressBar
            android:id="@+id/readingProgress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="48dp"
            android:background="@color/navigation_view_bg_color"
            android:progressTint="@color/colorPrimary"
            android:translationZ="1dp" />

        <LinearLayout
            android:id="@+id/controlsBar"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="bottom"
            android:background="@color/feed_list_item_bg_color"
            android:elevation="8dp"
            android:fitsSystemWindows="true"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/favoriteItem"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/add_to_favorites"
                android:scaleType="center"
                android:src="@drawable/ic_favorite_border_black_24dp"
                android:tint="@color/day_stack_night_alabaster" />

            <ImageView
                android:id="@+id/markAsUnRead"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/mark_as_unread"
                android:scaleType="center"
                android:src="@drawable/ic_radio_button_unchecked_24dp"
                android:tint="@color/day_stack_night_alabaster" />


            <ImageView
                android:id="@+id/share"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/share_article_description"
                android:scaleType="center"
                android:src="@drawable/ic_share_24dp"
                android:tint="@color/day_stack_night_alabaster" />

            <ImageView
                android:id="@+id/openInBrowser"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/open_in_browser"
                android:scaleType="center"
                android:src="@drawable/ic_open_in_browser_24dp"
                android:tint="@color/day_stack_night_alabaster" />


        </LinearLayout>


    </FrameLayout>


</FrameLayout>
